--- a/ColorStack.html
+++ b/ColorStack.html
@@ -4,6 +4,7 @@
     <title>Another demo</title>
     <link rel="stylesheet" type="text/css" href="Styles/CanvasDemo.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="js\ColorStack.js"></script>
 </head>
 <body>
         <canvas id="myCanvas" width="800" height="600"></canvas>
