fixed color stack js file and ref

--- a/ColorStack.html
+++ b/ColorStack.html
@@ -7,7 +7,8 @@
     <script src="js\ColorStack.js"></script>
 </head>
 <body>
-        <canvas id="myCanvas" width="800" height="600"></canvas>
+        <canvas id="myCanvas" width="256" height="256"></canvas>
+        <div>Blue value: <span id="blueValue"></span></div>
 </body>
 </html>
     
